# yartsev-lab-to-nwb

./: .gitignore  README.md  conversion_notes.md  pyproject.toml  read_nwb.ipynb
notebooks/: demo_visualizations.ipynb
src/yartsev_lab_to_nwb/forli2025/: behavior_interface.py  convert_all_sessions.py  convert_session.py  echolocation_interface.py  forli2025nwbconverter.py  imu_interface.py  lfp_interface.py  metadata.yaml  ripple_interface.py  spike_sorting_interface.py
